desktop versie klaar

--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
             <a href="#" class="menu__link" data-content="Ons Team">Ons Team</a>
           </li>
           <li class="menu__item">
-            <a href="#" class="menu__link" data-content="Prijzen">Prijzen</a>
-          </li>
-          <li class="menu__item">
             <a href="#" class="menu__link" data-content="Contact">Contact</a>
           </li>
         </ul>
@@ -56,8 +53,187 @@
           <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
       </nav>
+      <!-- end of nav -->
+      <!-- about us -->
+      <section class="about-us">
+        <div class="section-header">
+          <h1 class="section-heading">Over Ons</h1>
+          <div class="underline"></div>
+        </div>
+        <div class="services">
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-pen-nib"></i>
+              <h3>Interieur</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi,
+              alias! Atque provident dolore tempore non temporibus velit.
+            </p>
+          </div>
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-paint-roller"></i>
+              <h3>Exterieur</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi,
+              alias! Atque provident dolore tempore non temporibus velit.
+            </p>
+          </div>
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-pencil-alt"></i>
+              <h3>Design</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi,
+              alias! Atque provident dolore tempore non temporibus velit.
+            </p>
+          </div>
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-paint-brush"></i>
+              <h3>Decoratie</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi,
+              alias! Atque provident dolore tempore non temporibus velit.
+            </p>
+          </div>
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-ruler-combined"></i>
+              <h3>Planning</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi,
+              alias! Atque provident dolore tempore non temporibus velit.
+            </p>
+          </div>
+          <div class="service">
+            <div class="service-header">
+              <i class="far fa-building"></i>
+              <h3>Uitvoering</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi,
+              alias! Atque provident dolore tempore non temporibus velit.
+            </p>
+          </div>
+          <div class="about-us-img-wrapper">
+            <img src="images/house.png" alt="Huis" />
+          </div>
+        </div>
+      </section>
+      <!-- end of about us -->
+      <!-- Our Team -->
+      <section class="team">
+        <div class="section-header">
+          <div class="section-heading">Our Team</div>
+          <div class="underline"></div>
+        </div>
+        <div class="cards-wrapper">
+          <span data-tilt>
+            <div class="card">
+              <div class="card-img-wrapper">
+                <img
+                  src="images/HoucineNcib.jpeg"
+                  alt="Thanks to Houcine Ncib, unsplash.com"
+                />
+              </div>
+              <div class="card-info">
+                <h2>Houcine Ncib</h2>
+                <h3>Owner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button>Meer...</button>
+              </div>
+            </div>
+          </span>
+          <span data-tilt>
+            <div class="card">
+              <div class="card-img-wrapper">
+                <img
+                  src="images/stefan-katrandjiski.jpeg"
+                  alt="Thanks to Stefan Katrandjiski, unsplash.com"
+                />
+              </div>
+              <div class="card-info">
+                <h2>Stefan Katrandjiski</h2>
+                <h3>Designer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button>Meer...</button>
+              </div>
+            </div>
+          </span>
+          <span data-tilt>
+            <div class="card">
+              <div class="card-img-wrapper">
+                <img
+                  src="images/matheus-ferrero.jpeg"
+                  alt="Thanks to Matheus Ferrero, unsplash.com"
+                />
+              </div>
+              <div class="card-info">
+                <h2>Matheus Ferrero</h2>
+                <h3>Architect</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button>Meer...</button>
+              </div>
+            </div>
+          </span>
+        </div>
+      </section>
+      <!-- end of Our Team -->
+      <!-- contact -->
+      <section class="contact">
+        <div class="contact-wrapper">
+          <div class="contact-left"></div>
+          <div class="contact-right">
+            <h1 class="contact-heading">Contact</h1>
+            <form>
+              <div class="input-group">
+                <input type="text" class="field" id="full-name" />
+                <label for="full-name" class="input-label">Uw naam</label>
+              </div>
+              <div class="input-group">
+                <input type="email" class="field" id="email" />
+                <label for="email" class="input-label">Uw email</label>
+              </div>
+              <div class="input-group">
+                <textarea
+                  name="contact-text"
+                  id="contact-text"
+                  class="field"
+                ></textarea>
+                <label for="contact-text" class="message">Uw bericht</label>
+              </div>
+              <input type="submit" class="submit-btn" value="Verstuur" />
+            </form>
+          </div>
+        </div>
+      </section>
+      <!-- end of contact -->
+      <!-- footer -->
+      <footer class="footer">
+        <div class="footer-content">
+          <p class="copyright">
+            Copyright &copy; 2021, Kiki - All rights reserved
+          </p>
+          <div class="social-list">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+      </footer>
+      <!-- end of footer -->
     </div>
-
+    <!-- scroll button -->
+    <a href="#" class="scroll-btn">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+    <!-- end of scroll button -->
     <script src="script.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.js"
