--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <!-- Our Team -->
       <section class="team">
         <div class="section-header">
-          <div class="section-heading">Our Team</div>
+          <div class="section-heading">Ons Team</div>
           <div class="underline"></div>
         </div>
         <div class="cards-wrapper">
