--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
           <img src="images/bg.jpg" alt="Living-room, heart of the house" />
         </div>
         <div class="header__banner">
-          <h1>Architectuur, Interieur &amp; Design</h1>
+          <h1>
+            Architectuur,<br />
+            Interieur &amp; Design
+          </h1>
           <p>Lorem ipsum dolor sit amet consectetur.</p>
           <button>Bewonder</button>
         </div>
