--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     />
   </head>
   <body>
+    <div class="spinner-container">
+      <div class="circles">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
     <div class="container">
       <div class="hamburger__menu">
         <div class="hamburger__menu-line line-1"></div>
